# autohell-libfoo

./: .gitignore  .travis.yml  Makefile.am  README.html  README.md  README.txt  configure.ac
doc/: Makefile.am
examples/: Makefile.am  example.c
man/: Makefile.am
pkgconfig/: libfoo.pc.in
pod/: foo.pod  libfoo.pod
release/: clean.pl  prepare.pl
scripts/: Makefile.am  thinkit.sh
src/: Makefile.am  foo.c  foo.h  main.c
